--- a/agent/package.json
+++ b/agent/package.json
@@ -46,6 +46,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "axios": "^1.12.2",
     "blinking": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
